fixed the tests for redis support
